--- a/app/src/main/res/layout/fragment_series.xml
+++ b/app/src/main/res/layout/fragment_series.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.series.view.seriesFragment">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <ImageView
         android:id="@+id/imageSeries"
         android:layout_width="0dp"
         android:layout_height="36dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/series"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/ontheair"
         app:layout_constraintBottom_toTopOf="@id/seriesRecyclerView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,13 +23,58 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/seriesRecyclerView"
         android:layout_width="0dp"
-        android:layout_height="600dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="70dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageSeries"
+        app:layout_constraintBottom_toTopOf="@id/imageSeriesTopRated"
         tools:itemCount="10"
         tools:listitem="@layout/films" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imageSeriesTopRated"
+        android:layout_width="0dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/top"
+        app:layout_constraintTop_toBottomOf="@id/seriesRecyclerView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/seriesRecyclerViewTopRated"
+         />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/seriesRecyclerViewTopRated"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageSeriesTopRated"
+            tools:itemCount="10"
+            tools:listitem="@layout/films" />
+
+        <ImageView
+            android:id="@+id/imageSeriesPopular"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/populares"
+            app:layout_constraintTop_toBottomOf="@id/seriesRecyclerViewTopRated"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/seriesRecyclerViewPopular"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/seriesRecyclerViewPopular"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageSeriesPopular"
+            tools:itemCount="10"
+            tools:listitem="@layout/films" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
