--- a/app/src/main/res/layout/favorites.xml
+++ b/app/src/main/res/layout/favorites.xml
@@ -11,8 +11,8 @@
     app:cardCornerRadius="20dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="220dp"
-        android:layout_height="350dp">
+        android:layout_width="230dp"
+        android:layout_height="380dp">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/fotoFilme"
@@ -33,7 +33,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="29dp"
+            android:layout_marginBottom="10dp"
             android:fontFamily="@font/rubik_bold"
             android:gravity="center"
             android:textSize="15sp"
@@ -41,6 +41,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fotoFilme"
+            app:layout_constraintBottom_toTopOf="@+id/removeFavorite"
             tools:text="Título do Filme" />
 
 
@@ -49,7 +50,7 @@
             android:id="@+id/removeFavorite"
             android:layout_width="90dp"
             android:layout_height="50dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:fontFamily="@font/rubik_light"
             android:gravity="center"
             android:textSize="10sp"
@@ -59,7 +60,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/filmeName"
-            app:layout_constraintBottom_toBottomOf="parent"
+
              />
 
 
