--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="secondary_blue">#0C3559</color>
     <color name="pink">#F21B42</color>
     <color name="blue">#148BA6</color>
+    <color name="boxSearch">#003880</color>
 
 
 </resources>
