--- a/app/src/main/res/drawable/button_search.xml
+++ b/app/src/main/res/drawable/button_search.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="#949494"/>
+        android:color="#FFCC00"/>
     <corners
         android:radius="10dp" />
 
