--- a/app/src/main/res/navigation/home_nav.xml
+++ b/app/src/main/res/navigation/home_nav.xml
@@ -28,7 +28,7 @@
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
-        android:name="com.grupo7.brasilflixapp.ui.fragments.detail.view.DetailFragment"
+        android:name="com.grupo7.brasilflixapp.ui.fragments.detail.main.view.DetailSearchFragment"
         android:label="fragment_detail"
         tools:layout="@layout/fragment_detail" />
     <fragment
