--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,29 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.activity.splash.SplashActivity">
 
-    <ImageView
-        android:id="@+id/imageSplash"
-        android:layout_width="250dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="120dp"
+
+    <fragment
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/brflixlogo"
-         />
-
-    <com.google.android.material.progressindicator.CircularProgressIndicator
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageSplash"
-        android:layout_marginTop="250dp"
-        style="@style/Widget.App.CircularProgressIndicator"/>
-
-
-
+        app:navGraph="@navigation/splash_nav" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
