--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -61,7 +61,9 @@
                 android:id="@+id/imageCardDetail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true" />
+                android:src="@drawable/brflixlogo"
+                android:adjustViewBounds="true"
+                />
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -70,8 +72,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="Minha mãe é uma peça 3"
-            android:textSize="24dp"
+            android:text="@string/infoSearchDetail"
+            android:textSize="19sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cvCard" />
