--- a/app/src/main/res/layout/reviews.xml
+++ b/app/src/main/res/layout/reviews.xml
@@ -17,7 +17,7 @@
             android:layout_height="@dimen/watch_card_img_height"
             android:contentDescription="@string/media_poster"
             android:scaleType="fitCenter"
-            tools:src="@drawable/brflixlogo"
+            android:src="@drawable/brflixlogo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -30,7 +30,7 @@
             app:layout_constraintEnd_toStartOf="@id/reviewImage"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Nome" />
+            android:text="@string/noCommentsReview" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/reviewStar"
@@ -50,7 +50,7 @@
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/reviewStar"
             app:layout_constraintTop_toBottomOf="@id/reviewTitle"
-            tools:text="Comentário" />
+            android:text="@string/ratingReview" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
