--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,11 +30,12 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         app:backgroundColor="@color/topMenuHome"
-        app:menu="@menu/bottom_nav_home"
         app:indicatorRadius="20dp"
-        app:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:menu="@menu/bottom_nav_home"
+        app:textSize="15sp"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 
 
