--- a/app/src/main/res/layout/activity_my_preference.xml
+++ b/app/src/main/res/layout/activity_my_preference.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.myPreference.MyPreferenceActivity">
+    tools:context=".ui.activity.myPreference.MyPreferenceActivity"
+    android:background="@drawable/gradiente">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
