--- a/app/src/main/res/layout/films.xml
+++ b/app/src/main/res/layout/films.xml
@@ -8,7 +8,8 @@
     android:elevation="5dp"
     android:padding="5dp"
     android:id="@+id/filmesContainer"
-    app:cardCornerRadius="20dp">
+    app:cardCornerRadius="20dp"
+    android:background="@drawable/gradiente">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="220dp"
