--- a/app/src/main/res/layout/fragment_change_email.xml
+++ b/app/src/main/res/layout/fragment_change_email.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragments.changeemail.ChangeEmailFragment">
+    tools:context=".ui.fragments.changeemail.ChangeEmailFragment"
+    android:background="@drawable/gradiente">
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
