--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.favorites.view.FavoritesFragment">
+    tools:context=".ui.fragments.favorites.view.FavoritesFragment"
+    android:background="@drawable/gradiente">
 
     <RelativeLayout
         android:layout_width="match_parent"
