--- a/app/src/main/res/layout/fragment_home_image.xml
+++ b/app/src/main/res/layout/fragment_home_image.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.home.HomeImageFragment">
+    tools:context=".ui.fragments.home.HomeImageFragment"
+    >
 
     <ImageView
         android:id="@+id/imgImageTabHome"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:src="@drawable/tipsimageone" />
+        tools:src="@drawable/tipsimageone"
+        />
 
 </FrameLayout>
