--- a/app/src/main/res/layout/fragment_initial.xml
+++ b/app/src/main/res/layout/fragment_initial.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.initial.initialFragment">
+    tools:context=".ui.fragments.initial.initialFragment"
+    android:background="@drawable/gradiente">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
@@ -19,7 +20,7 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login"/>
+            android:text="@string/login" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
@@ -35,6 +36,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout" />
+        app:layout_constraintTop_toBottomOf="@id/tabLayout"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
