--- a/app/src/main/res/layout/fragment_my_preference.xml
+++ b/app/src/main/res/layout/fragment_my_preference.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragments.mypreference.MyPreferenceFragment">
+    tools:context=".ui.fragments.mypreference.MyPreferenceFragment"
+    android:background="@drawable/gradiente">
 
     <TextView
         android:id="@+id/tvList"
