--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true"
-    tools:context=".ui.fragments.register.RegisterFragment">
+    tools:context=".ui.fragments.register.RegisterFragment"
+    android:background="@drawable/gradiente">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
