--- a/app/src/main/res/layout/fragment_series.xml
+++ b/app/src/main/res/layout/fragment_series.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragments.series.view.seriesFragment">
+    tools:context=".ui.fragments.series.view.seriesFragment"
+    android:background="@drawable/gradiente">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
