--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragments.splash.view.SplashFragment">
+    tools:context=".ui.fragments.splash.view.SplashFragment"
+    android:background="@drawable/gradiente">
 
     <ImageView
         android:id="@+id/imageSplash"
